<resources>
    <string name="app_name">Tennis Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="select_location">Select Location</string>
    <string name="date_and__time">Date and Time:</string>
    <string name="select_date">Select Date:</string>
    <string name="select_time">Select Time:</string>
    <string name="select_match_type">Match Type:</string>
    <string name="create_match">Create Match</string>
    <string name="back_button_description">Back</string>
    <string name="location">Location:</string>
    <string name="submit">Submit</string>
    <string name="skill_level">Skill Level:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="match_details">Match Details</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="locationofmatch">Location:</string>
    <string name="edit_match">Edit Match</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="browse_matches">Browse Matches</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="chat">CHAT</string>
    <string name="start_new_chat">" New Chat"</string>
    <string name="chat1">CHAT</string>
    <string name="start_new_chat1">New Chat</string>
</resources>