<!-- match_fragment.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMatchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewMatchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_below="@id/textViewMatchTitle"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textViewMatchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        android:layout_below="@id/textViewMatchDate"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textViewMatchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationofmatch"
        android:textSize="18sp"
        android:layout_below="@id/textViewMatchTime"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonEditMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_match"
        android:layout_below="@id/textViewMatchLocation"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
