<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSignup"
        android:text="Signup for Tennis Buddy:"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_below="@+id/imageLogo"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:id="@+id/fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/lName">
        <TextView
            android:id="@+id/textfName"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:text="Confirm Password:"
            />

        <EditText
            android:id="@+id/editTextfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteY="236dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/email">
        <TextView
            android:id="@+id/textlName"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:text="Confirm Password:"
            />

        <EditText
            android:id="@+id/editTextlName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            tools:layout_editor_absoluteY="236dp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/textEmail"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            tools:layout_editor_absoluteY="172dp" />
        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="155dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/confirmPassword">
        <TextView
            android:id="@+id/textPassword"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:text="@string/password"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteY="236dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/textConfirmPassword"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:text="@string/confirm_password"
            />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteY="236dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="475dp"
        android:text="@string/skill_level"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="600dp"/>

    <Button
        android:id="@+id/buttonBackSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_margin="15dp" />


</RelativeLayout>